--- a/package.json
+++ b/package.json
@@ -19,11 +19,16 @@
   "author": "Rafael Briceño <rafaelbm9126@gmail.com>",
   "license": "MIT",
   "dependencies": {
+    "@types/react-redux": "^7.1.4",
     "axios": "^0.19.0",
     "dotenv": "^8.1.0",
+    "firebase": "^7.1.0",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
+    "react-redux": "^7.1.1",
     "react-router-dom": "^5.0.1",
+    "redux": "^4.0.4",
+    "redux-thunk": "^2.3.0",
     "styled-components": "^4.3.2"
   },
   "devDependencies": {
