--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
     "axios": "^0.19.0",
     "dotenv": "^8.1.0",
     "firebase": "^7.1.0",
+    "form-data": "^2.5.1",
+    "js-file-download": "^0.4.8",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
     "react-redux": "^7.1.1",
