--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "author": "Rafael Briceño <rafaelbm9126@gmail.com>",
   "license": "MIT",
   "dependencies": {
+    "@types/react-datepicker": "^2.9.4",
     "@types/react-redux": "^7.1.4",
     "axios": "^0.19.0",
     "dotenv": "^8.1.0",
@@ -26,6 +27,7 @@
     "form-data": "^2.5.1",
     "js-file-download": "^0.4.8",
     "react": "^16.9.0",
+    "react-datepicker": "^2.9.6",
     "react-dom": "^16.9.0",
     "react-redux": "^7.1.1",
     "react-router-dom": "^5.0.1",
